--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@
 # Ignore the default SQLite database.
 /db/*.sqlite3
 /db/*.sqlite3-journal
-/sam.gitignore
+/api_key
 # Ignore all logfiles and tempfiles.
 /log/*
 !/log/.keep
